Added unity project, added to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ src/hypothesis/__pycache__/
 src/input_handling/__pycache__/
 src/knowledge_graph/__pycache__/
 src/output_handling/__pycache__/
+unity/
